# WTLD

./: .gitignore  LICENSE  README.md
backend/: CMakeLists.txt  CMakePresets.json  config.json  vcpkg.json
backend/include/controllers/: AnalyticsController.h  AuthController.h  LogController.h  TwoFAController.h  WebSocketController.h
backend/include/middleware/: JwtMiddleware.h  RateLimitMiddleware.h
backend/include/models/: LogEntry.h  User.h
backend/include/services/: AuthService.h  LogAnalysisService.h  LogParserService.h  TwoFactorAuthService.h  WebSocketService.h
backend/include/utils/: AuthUtils.h
backend/migrations/: 003_create_analytics.sql  006_create_enhanced_analytics.sql
backend/src/: main.cpp
backend/src/controllers/: AnalyticsController.cc  AnalyticsController.cpp  AuthController.cc  AuthController.cpp  LogController.cc  LogController.cpp  TwoFAController.cc  TwoFAController.cpp  WebSocketController.cc  WebSocketController.cpp
backend/src/middleware/: JwtMiddleware.cpp  RateLimitMiddleware.cpp
backend/src/services/: AuthService.cc  AuthService.cpp  LogAnalysisService.cpp  LogParserService.cc  LogParserService.cpp  TwoFactorAuthService.cc  TwoFactorAuthService.cpp  WebSocketService.cpp
backend/src/utils/: AuthUtils.cpp
database/: docker-compose.yml
database/migrations/: 001_create_users.sql  002_create_logs.sql  004_create_2fa.sql  005_create_log_queue.sql  006_create_enhanced_analytics.sql  007_add_2fa_user_id_unique.sql
docs/: API.md  DEPLOYMENT.md
frontend/: .gitignore  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: AnalyticsCard.tsx  Layout.tsx  LoadingState.tsx  SeverityBadge.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Home.tsx  LogDetail.tsx  Login.tsx  Logs.tsx  Register.tsx  Settings.tsx  TwoFASetup.tsx
frontend/src/store/: authStore.ts  websocketStore.ts
frontend/src/types/: api.ts
